--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ tensorboard
 matplotlib
 numpy
 git+https://github.com/RobustBench/robustbench.git
-torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio===0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.7.1+cu110 
+-f https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.8.2+cu110
+-f https://download.pytorch.org/whl/torch_stable.html
+torchaudio===0.7.2 -f 
